inventory/k8s-prod/k8s-config/meow/Deployment.meow.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Deployment","metadata":{"annotations":{},"name":"meow","namespace":"meow"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"meow"}},"template":{"metadata":{"labels":{"app":"meow"}},"spec":{"containers":[{"image":"gcr.io/kubernetes-e2e-test-images/echoserver:2.1","name":"meow","ports":[{"containerPort":8080}]}]}}}}
  creationTimestamp: null
  generation: 1
  labels:
    app: meow
  name: meow
  selfLink: /apis/extensions/v1beta1/namespaces/meow/deployments/meow
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 2
  revisionHistoryLimit: 2147483647
  selector:
    matchLabels:
      app: meow
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: meow
    spec:
      containers:
      - image: gcr.io/kubernetes-e2e-test-images/echoserver:2.1
        imagePullPolicy: IfNotPresent
        name: meow
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
