inventory/k8s-prod/k8s-config/meow/Ingress.meow-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/","nginx.ingress.kubernetes.io/ssl-redirect":"false"},"name":"meow-ingress","namespace":"meow"},"spec":{"rules":[{"http":{"paths":[{"backend":{"serviceName":"meow-svc","servicePort":80},"path":"/meow"}]}}]}}
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  creationTimestamp: null
  generation: 1
  name: meow-ingress
  selfLink: /apis/extensions/v1beta1/namespaces/meow/ingresses/meow-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: meow-svc
          servicePort: 80
        path: /meow
status:
  loadBalancer: {}
